# BananaShop

./: .env.example  .gitignore  CLAUDE.md  README.md  THIRD_PARTY_LICENSES  docker-compose.yml  pyproject.toml
app/: main.py
proxy/: generate_cert.sh  nginx.conf
static/: app.js  index.html  styles.css
static/fonts/phosphor/: LICENSE
