[tool.poetry]
name = "bananashop"
version = "0.1.0"
description = "FastAPI static host for BananaShop image workspace"
authors = ["Michael <michael@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
python-dotenv = "^1.1.1"
pillow = "^11.3.0"
python-multipart = "^0.0.20"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
